# playfair

./: CMakeLists.txt  README.md  builder.c  builder.h  encodeAndDecode.c  encodeAndDecode.h  main.c  readAndWrite.c  readAndWrite.h
